web-infras/parser/tests/fixtures/babel/es2015/object/invalid-property-initializer-in-call/output.txt
[SyntaxError]: Invalid shorthand property initializer (1,4)
1|f({x = 0})
 |  ^
